# reddit_downloader

./: .gitignore  README.md  cleanup_orphans.py  compress_images.py  compute_hashes.py  config.ini.backup  config_template.txt  db_schema.sql  detect_explicit.py  exif_keys_report.py  export_image_names.py  fix_gif_db.py  gif_to_mp4.py  google_auth_guide.md  image_names_no_extensions.txt  migrate_gallery_urls.py  move_orphaned_files.py  png_to_jpg.py  pyproject.toml  reddit_gif_compress.py  reddit_image_downloader.py  requirements.txt  run_reddit_service.sh  scan_duplicates.py  telegram_bot.ini.example  telegram_image_bot.py  update_comments.py  web_ui.py
src/reddit_downloader/: __init__.py  downloader.py  migration.py  sw.js  web.py
src/reddit_downloader/templates/: activity.html  base.html  blocked_users.html  cleanup.html  compress.html  deleted_folder.html  details.html  duplicates.html  explicit.html  favourites.html  files.html  flairs.html  index.html  reddit_deleted.html  scrape_lists.html  socials.html  subreddit_map.html  update_posts.html
src/reddit_downloader/utils/: __init__.py  check_banned_subreddits.py  discovery_watcher.py  generate_thumbs.py  update_comments.py  update_comments_batch.py
templates/: base.html  details.html  index.html
